This document describes the high-level changes made to the civet software from
release to release.  It is cumulative, with the most recent changes listed
first.  The most up-to-date version is in the civet git repository
redmine:/var/git/civet.git

Version 1.5.0
-------------
Bug fixes
 - Fix crash for non-zero pbs_deljob return value in civet_cancel 

Features
 - Initial <foreach> implementation

Version 1.4.2
-------------
Bug fixes
 - Fix crash in civet_status
 - Fix typo in civet_status output
 - Move NFS sync to end of job

Version 1.4.1
-------------
Bug fixes:
 - Fixed problem where tool exit_test_logic was not geting validated properly
 - Fix problem where civet_cancel was not removing queued jobs (only running and
   held jobs were canceled)
 - Use U.S. spelling of "canceled" (vs cancelled)

Features
 - Added optional tool mem attribute, specifies amount of memory in gigabyes
   that will be requested by the generated batch job 
 - Add some #PBS directives to generated batch script for documentation and to
   facilitate running steps manually during testing/debugging
 - Add --keep-temp (-t) option to civet_run. If passed, the delete temp files 
   job will not be submitted to clean up temporary pipeline files.
 - Add --hold option to civet_run. If passed, the holds on pipeline jobs will
   not be released by civet. The jobs will stay held until the user releases
   them.
 - Add civet_release script which will release all user holds on the jobs in a
   Civet pipeline (specified by pipeline log directory) 
 - Add --quiet (-q) option to civet_status. This option only produces a single
   line of output if the status of the pipeline is FAILED, otherwise
   civet_status will be silent
 - Add binary attribute for Tool option. The binary attribute is combined with
   the value attribute and indicates that the value can be true or false. If
   the value is true, the command_text will be used to substitute for the option