@@ -27,6 +27,7 @@ def main():
     parser.add_argument('-t', '--keep-temp', dest='keep_temp', action='store_true', help="Don't delete temporary pipeline files")
     parser.add_argument('--hold', dest='release_jobs', action='store_false', help="Jobs will be held after pipeline submission")
     parser.add_argument('-f', '--force-conditional', dest='force_conditional', action='store_true', help="Force conditional steps to run")
+    parser.add_argument('-d', '--delay', dest='delay', default=None, help="job delay")
     parser.add_argument('pipeline', help="pipeline XML definition", nargs=1)
     parser.add_argument('pipeline_args', help="pipeline arguments", nargs=argparse.REMAINDER)
     parser.set_defaults(submit=True)
@@ -40,7 +41,7 @@ def main():
                  queue=args.queue, submit_jobs=args.submit, 
                  search_path=os.environ.get('CIVET_PATH'), 
                  user_override_file=args.option_file, keep_temp=args.keep_temp,
-                 release_jobs=args.release_jobs, force_conditional_steps=args.force_conditional)
+                 release_jobs=args.release_jobs, force_conditional_steps=args.force_conditional, delay=args.delay)
     PL.submit()
 
 if __name__ == "__main__":
