@@ -50,7 +50,7 @@ class Pipeline(object):
     def parse_XML(self, xmlfile, params, skip_validation=False, queue=None, 
                   submit_jobs=True, completion_mail=True, search_path="",
                   user_override_file=None, keep_temp=False, release_jobs=True,
-                  force_conditional_steps=False):
+                  force_conditional_steps=False, delay=None):
         pipe = ET.parse(xmlfile).getroot()
 
         # Register the directory of the master (pipeline) XML.
@@ -96,6 +96,7 @@ class Pipeline(object):
         self.release_jobs = release_jobs
         self.force_conditional_steps = force_conditional_steps
         self.skip_validation = skip_validation
+        self.delay = delay
         
         # And track the major components of the pipeline
         self._steps = []
