@@ -11,6 +11,7 @@ Bug fixes
 
 Features
  - Initial <foreach> implementation
+ - Delayed job execution (civet_run -d, --delay)
 
 Version 1.4.2
 -------------
